cabal-version:      2.4
name:               reddit-oauth2
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: Reddit OAuth2 API

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
bug-reports: https://github.com/penelopeysm/reddit-oauth2

-- The license under which the package is released.
-- license:
author:             Penelope Yong
maintainer:         penelopeysm@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
      Reddit,
      Reddit.Example

    other-modules:
      Reddit.Auth
      Reddit.Queue
      Reddit.Types

    default-extensions:
      OverloadedStrings
      OverloadedRecordDot
      RecordWildCards
      ScopedTypeVariables
      GADTs
      FlexibleInstances

    build-depends:
        base ^>=4.16.4.0 || ^>=4.17.0.0,
        bytestring,
        aeson,
        text,
        req,
        time,
        mtl,
        containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable reddit-oauth2
    main-is:          Main.hs

    default-extensions:
      OverloadedStrings

    build-depends:
        base ^>=4.16.4.0 || ^>=4.17.0.0,
        reddit-oauth2,
        bytestring,
        text,
        mtl

    hs-source-dirs:   app
    default-language: Haskell2010
